--- a/bhoma/apps/patient/templates/patient/export_data.html
+++ b/bhoma/apps/patient/templates/patient/export_data.html
@@ -4,7 +4,7 @@
 <div style="font-size:150%">
 <ul style="list-style:None; padding:0px">
     <li style="padding-top:10px; padding-bottom:10px">
-        <b><a href="{% url export_all_data %}">All forms (zip file)</a></b>
+        <strong><a href="{% url export_all_data %}">All forms (zip file)</a></strong>
     </li>
     <li style="padding-top:10px">
         <a href="{% url model_download_excel %}?model=CPatient">patient (registration and case) data</a>
