--- a/bhoma/apps/phone/templates/phone/sync_logs_for_chw.html
+++ b/bhoma/apps/phone/templates/phone/sync_logs_for_chw.html
@@ -18,7 +18,7 @@
 {% endblock %}
 {% block content %}
 <br></br>
-<h3>Sync history for <b>{{ chw.formatted_name }}</b> at {{ chw.current_clinic_display }}</h3>
+<h3>Sync history for <strong>{{ chw.formatted_name }}</strong> at {{ chw.current_clinic_display }}</h3>
 <table class="datatable">
 <thead>
     <tr>
