--- a/bhoma/apps/webapp/templates/footer.html
+++ b/bhoma/apps/webapp/templates/footer.html
@@ -5,7 +5,7 @@
         </div>
         <div class="span-12 last">
             <p style="text-align:right">
-                <b>BHOMA</b>&nbsp;&nbsp;Better Health Outcomes for Zambia | Copyright &copy; 2010 <b>CIDRZ</b>
+                <strong>BHOMA</strong>&nbsp;&nbsp;Better Health Outcomes for Zambia | Copyright &copy; 2010 <strong>CIDRZ</strong>
             </p>
         </div>
     </div><!-- End Container Class -->
