--- a/bhoma/apps/webapp/templates/touchscreen/wrapper-raw.html
+++ b/bhoma/apps/webapp/templates/touchscreen/wrapper-raw.html
@@ -121,14 +121,14 @@
 			    <table cellpadding="7" class="shiny-button rounded" style="margin-bottom: 15px;" onclick="location.href='{% url touchscreen_logout %}';">
 			        <tbody>
 			            <tr>
-			                <td><b>&nbsp;Yes, log out now&nbsp;</b></td>
+			                <td><strong>&nbsp;Yes, log out now&nbsp;</strong></td>
 			            </tr>
 			        </tbody>
 			    </table>
 			    <table cellpadding="7" style="color: white; font-weight: bold; margin-bottom: 5px;" id="alert-ch0" class="shiny-button rounded jqmClose">
 			        <tbody>
 			            <tr>
-			                <td><b>&nbsp;No, continue using BHOMA&nbsp;</b></td>
+			                <td><strong>&nbsp;No, continue using BHOMA&nbsp;</strong></td>
 			            </tr>
 			        </tbody>
 			    </table>
