--- a/bhoma/apps/patient/templates/patient/single_patient_block.html
+++ b/bhoma/apps/patient/templates/patient/single_patient_block.html
@@ -1,11 +1,11 @@
 <div align="center" style="font-size: 80%;">
   <table border="0" style="max-width: 480px; border: 3px solid black; padding: 10px; background-color: white;">
-    <tr><td>ID:&nbsp;&nbsp;</td><td><b>{{ patient.formatted_id }}</b></td></tr>
-    <tr><td valign="top">Name:&nbsp;&nbsp;</td><td><b>{{ patient.last_name }}, {{ patient.first_name }}</b></td></tr>
-    <tr><td>Sex:&nbsp;&nbsp;</td><td><b>{% if patient.gender %}{% ifequal patient.gender 'm' %}Male{% else %}Female{% endifequal %}{% else %}??{% endif %}</b></td></tr>
-    <tr><td>Birthdate:&nbsp;&nbsp;</td><td><b>{{ patient.birthdate|date:"d M Y"|default:"??" }} {% if patient.birthdate_estimated %}(est){% endif %}</b></td></tr>
-    <tr><td>Age:&nbsp;&nbsp;</td><td><b>{{ patient.formatted_age|default:"??" }}</b></td></tr>
-    <tr><td>Village:&nbsp;&nbsp;</td><td><b>{{ patient.address.village|default:"&#x2014;" }}</b></td></tr>
-    <tr><td>Contact:&nbsp;&nbsp;</td><td><b>{{ patient.default_phone|default:"&#x2014;" }}</b></td></tr>
+    <tr><td>ID:&nbsp;&nbsp;</td><td><strong>{{ patient.formatted_id }}</strong></td></tr>
+    <tr><td valign="top">Name:&nbsp;&nbsp;</td><td><strong>{{ patient.last_name }}, {{ patient.first_name }}</strong></td></tr>
+    <tr><td>Sex:&nbsp;&nbsp;</td><td><strong>{% if patient.gender %}{% ifequal patient.gender 'm' %}Male{% else %}Female{% endifequal %}{% else %}??{% endif %}</strong></td></tr>
+    <tr><td>Birthdate:&nbsp;&nbsp;</td><td><strong>{{ patient.birthdate|date:"d M Y"|default:"??" }} {% if patient.birthdate_estimated %}(est){% endif %}</strong></td></tr>
+    <tr><td>Age:&nbsp;&nbsp;</td><td><strong>{{ patient.formatted_age|default:"??" }}</strong></td></tr>
+    <tr><td>Village:&nbsp;&nbsp;</td><td><strong>{{ patient.address.village|default:"&#x2014;" }}</strong></td></tr>
+    <tr><td>Contact:&nbsp;&nbsp;</td><td><strong>{{ patient.default_phone|default:"&#x2014;" }}</strong></td></tr>
   </table>
 </div>
