remove accidently double bracket

--- a/bhoma/apps/reports/templates/reports/punchcard.html
+++ b/bhoma/apps/reports/templates/reports/punchcard.html
@@ -1,4 +1,4 @@
-{{% extends "reports/report_base.html" %}
+{% extends "reports/report_base.html" %}
 {% load report_tags %}
 {% block page_javascripts %}
     {{ block.super }}
