--- a/bhoma/apps/chw/templates/chw/single_chw.html
+++ b/bhoma/apps/chw/templates/chw/single_chw.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h3>{{ chw.first_name }} {{ chw.last_name }} @ {{ chw.current_clinic_display }} (Zone {{ chw.current_clinic_zone|default:"NONE" }})</h3>
 <h4><p>Your CommCare username is: <strong>{{ chw.user.username|default:"NOT SET" }}</strong></p></h4>
-{% if debug %}
+{% if user.is_superuser %}
 <p><a href="{% url futon chw.get_id %}">view in futon (DEBUG)</a></p>
 {% endif %} 
 {% endblock %}
