--- a/bhoma/apps/couchlog/templates/couchlog/ajax/single.html
+++ b/bhoma/apps/couchlog/templates/couchlog/ajax/single.html
@@ -18,7 +18,7 @@
     <tr><td>Stack Trace:&nbsp;&nbsp;</td><td><strong>{{ log.stack_trace|linebreaksbr|truncatewords:50 }}</strong></td></tr>
     <tr><td>Url:&nbsp;&nbsp;</td><td><strong>{{ log.url|default:"N/A" }}</strong></td></tr>
     <tr><td>Query Params:&nbsp;&nbsp;</td><td><strong>{{ log.query_params|default:"N/A" }}</strong></td></tr>
-{% if debug %}
+{% if user.is_superuser %}
     <tr><td></td><td><a href="{% url futon log.get_id %}">view in futon</a></td></tr>
 {% endif %}
   </table>
