--- a/bhoma/apps/webapp/templates/national_landing_page.html
+++ b/bhoma/apps/webapp/templates/national_landing_page.html
@@ -9,7 +9,7 @@
     
 </ul>
 <br></br><br></br><br></br><br></br><br></br>
-{% if debug %}
+{% if user.is_superuser %}
 <h3>Debug</h3>
 <ul>
     <li><a href="{% url clinic_landing_page %}">Go to Clinic Landing Page</a></li>
