--- a/bhoma/apps/webapp/static/stylesheets/bhoma.css
+++ b/bhoma/apps/webapp/static/stylesheets/bhoma.css
@@ -37,6 +37,12 @@ ul.tabs
 {
     font-weight:bold;
 }
+
+.boxed {
+    border: 1px solid #cccccc;
+    padding: 5px;
+    background-color: #f3f3f3;
+}
  
 .code  {
     border: 1px solid #cccccc;
