--- a/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
+++ b/bhoma/apps/patient/templates/patient/single_patient_touchscreen.html
@@ -13,7 +13,7 @@
 </div>
 <div class="span-10 last">
 {% include "patient/partials/encounter_choice_list.html" %}
-{% if user.is_superuser %}
+{% if debug %}
 <h4 style="padding: 0px; margin-bottom: 5px;">Debug Tools</h4>
 <div class="span-5">
 <ul style="list-style: None; padding-left: 0px;">
