--- a/bhoma/apps/webapp/templates/national_landing_page.html
+++ b/bhoma/apps/webapp/templates/national_landing_page.html
@@ -10,7 +10,7 @@
 </ul>
 <br></br><br></br><br></br><br></br><br></br>
 {% if user.is_superuser %}
-<h3>Debug</h3>
+<h3>Debug/administrative operations</h3>
 <ul>
     <li><a href="{% url clinic_landing_page %}">Go to Clinic Landing Page</a></li>
     <li><a href="{% url couchlog_home %}">View recent error messages</a></li>
