fix typo in export instructions

--- a/bhoma/apps/patient/templates/patient/export_instructions.html
+++ b/bhoma/apps/patient/templates/patient/export_instructions.html
@@ -19,7 +19,7 @@ moments... If it doesn't, try refreshing the page or clicking <a
 commands to import it:
 <pre class="code">
     $ cd BHOMA_HOME
-    $ manage.py load_patients {{zip_filename}}
+    $ manage.py load_patient {{zip_filename}}
 </pre>
 </p>
 <p class="info">You can also write a unit test from this patient stub as follows:</p>
