link to duplicate case report

--- a/bhoma/apps/reports/templates/reports/report_list.html
+++ b/bhoma/apps/reports/templates/reports/report_list.html
@@ -32,6 +32,7 @@
 <div class="span-12 last">
     <h2>System administration</h2>
     <li><a href="{% url couchlog_home %}">View recent error messages</a></li>
+    <li><a href="{% url duplicate_cases %}">View cases found with duplicates</a></li>
 </div>
 {% endif %}
 {% endblock %} 
