--- a/bhoma/apps/phone/templates/phone/sync_logs_for_chw.html
+++ b/bhoma/apps/phone/templates/phone/sync_logs_for_chw.html
@@ -24,6 +24,7 @@
     <tr>
         <th>Sync #</th>
         <th>Date</th>
+        <th>Initial sequence id</th>
         <th>Last sequence id</th>
         <th>Cases synced</th>
     </tr>
@@ -33,6 +34,7 @@
     <tr>
         <td>{{ forloop.counter }}</td>
         <td>{{ log.date }}</td>
+        <td>{{ log.get_previous_log.last_seq|default:0 }}</td>
         <td>{{ log.last_seq }}</td>
         <td>{{ log.cases|length }}</td>
     </tr>
