show both totals and average times on the sparkline report

--- a/bhoma/apps/reports/templates/reports/report_base.html
+++ b/bhoma/apps/reports/templates/reports/report_base.html
@@ -2,6 +2,7 @@
 {% block page_stylesheets %}
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/jquery-ui-bhoma/jquery-ui-1.8.4.custom.css" type="text/css">
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/datatables/css/demo_table_jui.css" type="text/css">
+    <link rel="stylesheet" href="{{MEDIA_URL}}reports/css/flot.css" type="text/css">
     <style>
         .ui-datepicker-calendar {
             display: none;
