--- a/bhoma/apps/reports/templates/reports/entrytimes.html
+++ b/bhoma/apps/reports/templates/reports/entrytimes.html
@@ -5,12 +5,16 @@
     {% if clinic_id %}
     <script id="source"> 
 		$(function () {
-		    var d = {{ chart_data|safe }};
-		    var extras = {{ chart_extras|safe }};
-		    $.plot($("#placeholder"), [d], 
+		    var avgs = {{ avgs_data|safe }};
+		    var tots = {{ totals_data|safe }};
+            var extras = {{ chart_extras|safe }};
+		    $.plot($("#placeholder"), [{data: avgs, label: "average time per form"}, 
+		                               {data: tots, label: "total forms filled", yaxis: 2}], 
 		              { xaxis: {mode: "time",
 		                        minTickSize: [1, "day"]}, 
-		                yaxis: {min: 0},
+		                yaxis: {min: 0, tickFormatter: function (v, axis) { return v + " sec" }},
+                        y2axis: {min: 0, tickFormatter: function (v, axis) { return v +" forms" }},
+		                legend: { position: "nw", width: 40 }, 
 		                grid: { hoverable: true }, 
 		                series: { lines: { show: true },
                                   points: { show: true }}
@@ -69,6 +73,6 @@
 {% block reportcontent %}
 {{ block.super }}
 {% if clinic_id %}
-    <div id="placeholder" style="width:950px;height:300px;"></div> 
+    <div id="placeholder" style="width:950px;height:400px;"></div> 
 {% endif %}
 {% endblock %}
