--- a/bhoma/apps/reports/templates/reports/report_list.html
+++ b/bhoma/apps/reports/templates/reports/report_list.html
@@ -24,6 +24,7 @@
     <h2>Workforce management</h2>
     <ul>
         <li><a href="{% url user_summary_report %}">User/CHW summary</a></li>
+        <li><a href="{% url chw_summary_report %}">Single CHW report</a></li>
         <li><a href="{% url punchcard_report %}">Punchcard report</a></li>
         <li><a href="{% url entrytime_report %}">Form entry time report</a></li>
         <li><a href="{% url phone_sync_logs %}">Look at sync logs from phones</a></li>
