small clean up unused flot variable

--- a/bhoma/apps/reports/templates/reports/entrytimes.html
+++ b/bhoma/apps/reports/templates/reports/entrytimes.html
@@ -14,7 +14,7 @@
 		                        minTickSize: [1, "day"]}, 
 		                yaxis: {min: 0, tickFormatter: function (v, axis) { return v + " sec" }},
                         y2axis: {min: 0, tickFormatter: function (v, axis) { return v +" forms" }},
-		                legend: { position: "nw", width: 40 }, 
+		                legend: { position: "nw"}, 
 		                grid: { hoverable: true }, 
 		                series: { lines: { show: true },
                                   points: { show: true }}
