--- a/bhoma/apps/webapp/templates/layout.html
+++ b/bhoma/apps/webapp/templates/layout.html
@@ -6,16 +6,15 @@
     <title>{% block title %}BHOMA{% endblock %}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/blueprint/screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/blueprint/print.css" type="text/css" media="print">
-    <!--[if lt IE 8]><link rel="stylesheet" href="{{MEDIA_URL}}webapp/blueprint/stylesheets/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+    {% include "imports/blueprint.html" %}
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/bhoma.css" type="text/css" >
 {% block page_stylesheets %}{% endblock %}
 {% endblock %}
 {% block javascripts %}
     <!-- javascripts (global, app, page) -->
-    <script type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery-1.4.2.min.js"></script>
+    {% include "imports/jquery.html" %}
 {% endblock %}
+{% block page_imports %}{% endblock %}
 {% block page_javascripts %}{% endblock %}
 </head>
 <body>
