--- a/bhoma/apps/phone/templates/phone/sync_logs_for_chw.html
+++ b/bhoma/apps/phone/templates/phone/sync_logs_for_chw.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% load sync_log_tags %}
 {% block page_imports %}
     {% include "imports/jquery-ui.html" %}
     {% include "imports/datatables.html" %}
@@ -17,26 +18,5 @@
 {% block content %}
 <br></br>
 <h3>Sync history for <strong>{{ chw.formatted_name }}</strong> at {{ chw.current_clinic_display }}</h3>
-<table class="datatable">
-<thead>
-    <tr>
-        <th>Sync #</th>
-        <th>Date</th>
-        <th>Initial sequence id</th>
-        <th>Last sequence id</th>
-        <th>Cases synced</th>
-    </tr>
-</thead>
-<tbody>
-{% for log in sync_data %}
-    <tr>
-        <td>{{ forloop.counter }}</td>
-        <td>{{ log.date }}</td>
-        <td>{{ log.get_previous_log.last_seq|default:0 }}</td>
-        <td>{{ log.last_seq }}</td>
-        <td>{{ log.cases|length }}</td>
-    </tr>
-{% endfor %}
-</tbody>
-</table>
+{% sync_logs_for_chw chw.get_id %}
 {% endblock %}
