--- a/bhoma/apps/encounter/templates/encounter/single_encounter.html
+++ b/bhoma/apps/encounter/templates/encounter/single_encounter.html
@@ -1,13 +1,12 @@
 {% extends "touchscreen/wrapper-raw.html" %}
 {% load xform_tags %}
 {% block page_head %}
+{% block page_imports %}
+    {% include "imports/jquery-ui.html" %}
+{% endblock %}
 {% block page_stylesheets %}
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/scrolling.css" type="text/css">    
     <link rel="stylesheet" href="{{MEDIA_URL}}xforms/stylesheets/xforms.css" type="text/css">    
-{% endblock %}
-{{% block page_imports %}
-    {% include "imports/jquery.html" %}
-    {% include "imports/jquery-ui.html" %}
 {% endblock %}
 {% block page_javascripts %}
     <script type="text/javascript">
