--- a/bhoma/apps/reports/templates/reports/report_list_ts.html
+++ b/bhoma/apps/reports/templates/reports/report_list_ts.html
@@ -16,7 +16,7 @@ Report List
 		{% url unrecorded_referral_list  as ref_list_url %}
 		{% ts_button "Open Case List" ref_list_url "big-button shiny-button" "font-size:x-large"%}
 	    {# no more HMIS report (at least for pilot {% ts_button "HMIS Report (TODO)" "#" "big-button shiny-button" "font-size:x-large"%} #}
-	    {% url mortality_register as mr_url %}
+	    {% url enter_mortality_register as mr_url %}
 	    {% ts_button "Enter NHC Community Register" mr_url "big-button shiny-button" "font-size:170%"%}
 	</div>
 	<div class="span-12 last">
