invalidate js files so they force refresh

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -3,12 +3,12 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <link rel="stylesheet" href="{{MEDIA_URL}}webapp/stylesheets/touchscreen.css" type="text/css" >
-    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/layout.js"></script>   
-    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/touchscreen-ui.js"></script>   
-    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/formnav.js"></script>   
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/layout.js?version=2"></script>   
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/touchscreen-ui.js?version=2"></script>   
+    <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/formnav.js?version=2"></script>   
     <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/jquery-1.4.2.min.js"></script>
     <script language="javascript" type="text/javascript" src="{{MEDIA_URL}}webapp/javascripts/shortcut.js"></script>
-    <script language="javascript" type="text/javascript;version=1.7" src="{{MEDIA_URL}}webapp/javascripts/workflow.js"></script>
+    <script language="javascript" type="text/javascript;version=1.7" src="{{MEDIA_URL}}webapp/javascripts/workflow.js?version=2"></script>
 {% for script in dynamic_scripts %}
     <script language="javascript" type="text/javascript;version=1.7" src="{{MEDIA_URL}}{{script}}"></script>   
 {% endfor %}
