add link back to device list page on log detail page

--- a/bhoma/apps/phonelog/templates/phonelog/devicelogs.html
+++ b/bhoma/apps/phonelog/templates/phonelog/devicelogs.html
@@ -45,6 +45,8 @@ function showdups(i) {
 <span style="float: right; color: #888;">&raquo; later |</span>
 {% endif %}
 
+<div style="text-align: center;"><a href="{% url bhoma.apps.phonelog.views.devices %}">back to device list</a></div>
+
 <div style="clear: both;"><br>
 
 <table>
@@ -101,6 +103,8 @@ function showdups(i) {
 {% else %}
 <span style="float: right; color: #888;">&raquo; later |</span>
 {% endif %}
+
+<div style="text-align: center;"><a href="{% url bhoma.apps.phonelog.views.devices %}">back to device list</a></div>
 
 <div style="clear: both;"><br>
 
