fix search documentation

--- a/bhoma/apps/couchlog/templates/couchlog/lucene_docs.html
+++ b/bhoma/apps/couchlog/templates/couchlog/lucene_docs.html
@@ -41,7 +41,7 @@ are searched by default.  Additionally the following fields can be searched:</p>
 <p>Here are some search examples (paste these into the search bar to see results).</p>
 
 <p class="example">Search all documents from two different clinics:</p>
-<pre class="searchtext">clinic:5010140 AND clinic:5010120</pre>
+<pre class="searchtext">clinic:5010140 OR clinic:5010120</pre>
 
 <p class="example">Search all documents matching "files" in october:</p>
 <pre class="searchtext">files AND date:[2010-10-01 TO 2010-11-01]</pre>
