--- a/bhoma/apps/reports/templates/reports/user_summary.html
+++ b/bhoma/apps/reports/templates/reports/user_summary.html
@@ -15,7 +15,7 @@
     {% for row in results %}
     <tr>
         {% render_user row.user %}
-        <td>{{ row.last_submission_date|date }}</td>
+        <td>{{ row.last_submission_date|date|default:"???" }}</td>
         <td>{{ row.value }}</td>
     </tr>
 {% endfor %}
