enhancements to layout algorithm to be aware of aspect ratios

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -14,6 +14,9 @@
 {% endfor %}
     <script language="javascript">
 
+SCREEN_WIDTH = 1024;
+SCREEN_HEIGHT = 768;
+
 XFORM_URL = "{% url xform_player_proxy %}";
 PRELOADER_URL = "{% url xform_preloader %}";
 XFORM_NAME = "{{form.name}}";
