small tweaks to single patient layout

--- a/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
+++ b/bhoma/apps/encounter/templates/encounter/partials/encounter_list.html
@@ -2,7 +2,7 @@
 <table class="touchscreen" style="margin-left:-18px; table-layout:fixed;" width=500>
     <col width=14></col>
     <col width=100></col>
-    <col width=110></col>
+    <col width=145></col>
     <col width=276></col>
 {% for encounter in encounters %}
     {% if forloop.first %}
@@ -10,7 +10,7 @@
             <th></th>
             <th>Date</th>
             <th>Visit Type</th>
-            <th>Case Outcome</th>
+            <th>Case / Outcome</th>
         </thead>
         <tbody>
     {% endif %}
