--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -14,9 +14,6 @@
 {% endfor %}
     <script language="javascript">
 
-SCREEN_WIDTH = 1024;
-SCREEN_HEIGHT = 768;
-
 XFORM_URL = "{% url xform_player_proxy %}";
 PRELOADER_URL = "{% url xform_preloader %}";
 XFORM_NAME = "{{form.name}}";
@@ -78,7 +75,7 @@ function init () {
     </div>
 
     <!-- an off-screen area to temporarily dump text and play with text sizing -->
-    <div id="staging" style="position: absolute; left: 0px; top: 1000px; width: 1500px; height: 1500px; background-color: #ddd; font-weight: bold;">
+    <div id="staging" style="position: absolute; left: 0px; background-color: #ddd; font-weight: bold;">
       <span id="snippet"></span>
     </div>
     
