choice layout dynamically uses current pane size

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -64,7 +64,7 @@ function init () {
     oncontextmenu="return false;"> <!-- disable right-click -->
     <div id="viewport" style="
       -moz-user-select: -moz-none; /* disable ability to select static text */
-      -webkit-user-select: -moz-none; /* disable ability to select static text */
+      -webkit-user-select: none; /* disable ability to select static text */
       position: absolute;
       left: 0px;
       top: 0px;
