--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -22,9 +22,7 @@ XFORM_UID = null;
 CLINIC_PREFIX = {{ clinic.prefix }};
 CLINIC_NUM_CHW_ZONES = 6; //templatize me
 
-autoAdvance = true;
-
-kbdQwerty = false;
+//NUMERIC_MONTHS = true;
 
 function init () {
 
