support numeric months on date entry

--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -22,7 +22,7 @@ XFORM_UID = null;
 CLINIC_PREFIX = {{ clinic.prefix }};
 CLINIC_NUM_CHW_ZONES = 6; //templatize me
 
-//NUMERIC_MONTHS = true;
+NUMERIC_MONTHS = false;
 
 function init () {
 
