--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -22,7 +22,8 @@ XFORM_UID = null;
 CLINIC_PREFIX = {{ clinic.prefix }};
 CLINIC_NUM_CHW_ZONES = 6; //templatize me
 
-NUMERIC_MONTHS = false;
+//NUMERIC_MONTHS = true;
+//DATE_ENTRY_ORDER = '-';
 
 function init () {
 
