--- a/bhoma/apps/webapp/templates/touchscreen.html
+++ b/bhoma/apps/webapp/templates/touchscreen.html
@@ -23,7 +23,7 @@ CLINIC_PREFIX = {{ clinic.prefix }};
 CLINIC_NUM_CHW_ZONES = 6; //templatize me
 
 //NUMERIC_MONTHS = true;
-//DATE_ENTRY_ORDER = '-';
+//DATE_DISPLAY_ORDER = 'dmy';
 
 function init () {
 
